--- a/.github/workflows/emprego.yml
+++ b/.github/workflows/emprego.yml
@@ -56,9 +56,9 @@ jobs:
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
 
-      - name: Prepare Database
-        run: |
-          bundle exec rails db:prepare
+      #- name: Prepare Database
+       # run: |
+        #  bundle exec rails db:prepare
 
       - name: Run Cucumber
         run: |
