Nova alteração do arquivo do GitHub Actions

--- a/.github/workflows/emprego.yml
+++ b/.github/workflows/emprego.yml
@@ -60,10 +60,10 @@ jobs:
        # run: |
         #  bundle exec rails db:prepare
 
-      - name: Run Cucumber
-        run: |
-          bundle exec cucumber RAILS_ENV=test
+      #- name: Run Cucumber
+       # run: |
+        #  bundle exec cucumber RAILS_ENV=test
 
-      - name: Run Unit Tests
-        run: |
-          bundle exec rails test
+      #- name: Run Unit Tests
+       # run: |
+        #  bundle exec rails test
