--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: mysite
-    databaseName: mysite
-    user: mysite
+  - name: bancoemprego
+    databaseName: bancoemprego
+    user: bancoemprego_user
 
 services:
   - type: web
-    name: mysite
+    name: site_emprego
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: site_emprego
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
